<resources>
    <string name="app_name_movie">Movie Catalogue</string>
    <string name="app_name_tvshow">Tv Show Catalogue</string>
    <string name="detail">Detail</string>
    <string name="change_language_settings">Rubah Bahasa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_movie">Movies</string>
    <string name="title_tv_show">Tv Shows</string>
    <string name="move_with_data">move with data</string>
    <string name="this_is_moveactivity">move Activity</string>
    <string name="data_received">data Received</string>
    <string name="move_with_object">Move With Object</string>
    <string name="object_received">Object Received</string>
    <string name="name_heroes">name movies</string>
    <string name="lorem">Description</string>
    <string name="todo_photo_movie">TODO: PHOTO MOVIE</string>
    <string name="genre">Genre:</string>
    <string name="action">action</string>
    <string name="tahun">Tahun:</string>
    <string name="tahun_2">Tahun</string>
    <string name="todo_photo">TODO Photo</string>
    <string name="tahun_pembuatan">Tahun Pembuatan</string>
    <string name="genres">Genre</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="pembatas">Garis pembatas</string>
    <string name="rating">Rating</string>
    <string name="rating_nya">9.4</string>
    <string name="vote">vote</string>
    <string name="total_vote">total Vote</string>
    <string name="API">"&amp;language=en-US"</string>
    <string name="succes_add_data">Success Add Movie</string>
    <string name="failed_add_data">Failed Add Movie</string>
    <string name="notif_failed_delete">Failed delete data</string>
    <string name="succes_add_data_tv">Success Add TV</string>
    <string name="failed_add_data_tv">Failed Add TV</string>
    <string name="favorit">Favorit</string>
    <string name="delete">Delete</string>
    <string name="choose">choose</string>
    <string name="text_favorit_movie">Movie Favorit in here</string>
    <string name="text_favorit_tvShow">Tv Show Favorit in here</string>
    <string name="app_name_movie_favorit">Movie Favorit</string>
    <string name="app_name_tvshow_favorit">Tv Show Favorit</string>
    <string-array name="data_name">
        <item>127 Hours</item>
        <item>Alita Batlle Angel</item>
        <item>Batman Dark Knight</item>
        <item>Brithburn</item>
        <item>Founder MC Donald</item>
        <item>Iam Hero</item>
        <item>Insidious</item>
        <item>Survival Family</item>
        <item>US</item>
        <item>Detective Pikachu</item>
    </string-array>
    <string-array name="data_genre">
        <item>Adventure, Biography, Drama</item>
        <item>Action, Adventure, Sci-Fi, Thriller</item>
        <item>Action, Thriller</item>
        <item>Horror, Sci-Fi</item>
        <item>Biography, Drama, History</item>
        <item>Action, Horror</item>
        <item>Horror, Mystery, Thriller</item>
        <item>Adventure, Comedy, Family</item>
        <item>Horror, Mystery, Thriller</item>
        <item>Action, Adventure, Comedy</item>
    </string-array>
    <string-array name="data_description">
        <item>127 Hours adalah kisah nyata dari perjuangan seorang pendaki gunung bernama Aron Ralston</item>
        <item>Battle Angel menceritakan Alita, robot yang dilahirkan kembali berkat kemampuan Dr. Ido.</item>
        <item>8 tahun setelah kejadian dalam The Dark Knight, Bruce Wayne (Christian Bale).</item>
        <item>Di kota kecil bernama Brightburn, sepasang suami istri menginginkan anugerah buah hati yang tidak kunjung didapat.</item>
        <item>Menceritakan kisah nyata tentang bagaimana Ray Kroc (Michael Keaton).</item>
        <item>Hideo Suzuki seorang assisten mangaka, ia pernah menjadi assisten mangaka dengan bayaran yang kecil. </item>
        <item>Elise Reinier (Lin Shaye) mendapat telepon dari seseorang yang mengaku mendapatkan gangguan mahluk halus di rumahnya.</item>
        <item>Suatu ketika Pemadaman listrik di seluruh dunia terjadi.</item>
        <item>Menceritakan satu keluarga yang tengah berlibur ke pantai dan menginap di rumah masa kecil sang istri, Adelaide Wilson.</item>
        <item>Pokemon detective pikachu menceritakan Hilangnya detektif terkenal, Harry Goodman yang menghilang secara misterius setelah mengalami kecelakaan pada mobil yang ia tumpangi.</item>
    </string-array>
</resources>